2012-10-12 <fmbiete at gmail dot com>
    BackendIMAP - AES 12+
    * Flag support: messages can be starred in the client, and the change is reflexed in the server
    
2012-10-08 <fmbiete at gmail dot com>
    BackendIMAP
    * Truncation support

2012-10-05 <fmbiete at gmail dot com>
    BackendIMAP - AES 25
    * MIME support
    
2012-10-05 <fmbiete at gmail dot com>
    BackendIMAP - AES 12+
    * Preview always as plain text
    * Regression: iOS support for MIME
    
2012-10-04 <fmbiete at gmail dot com>
    BackendIMAP - AES 12+
    * Receive HTML messages with inlined images
    * Set the body type of the message based on the preferences of the mobile device
    * Bug: some attachments are truncated when fetching them

2012-09-30 <fmbiete at gmail dot com>
    BackendIMAP - AES 12+
    * Get Attachment size looking the content-disposition, fallback to the length of the body part
    * Bug: IMAP_EXCLUDED_FOLDERS not read
    
    lib/request/getAttachment.php
    * http://z-push.sourceforge.net/phpbb/viewtopic.php?f=5&t=2055
    
2012-09-29 <fmbiete at gmail dot com>
    BackendIMAP - AES 12+
    * Receive messages formatted as HTML, always prefer HTML over PLAINTEXT
 
    